--- a/assets/css/p-tablet.css
+++ b/assets/css/p-tablet.css
@@ -1,4 +1,17 @@
 /* Small devices (portrait tablets and large phones, 600px and up) */
-/* @media only screen and (min-width: 600px) {
-    
-} */
+@media only screen and (min-width: 600px) {
+    #grid{
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 1em;
+        width: 100%;
+        margin-left: 0%;
+    }
+    .square{
+        border: solid 1px black;
+        width: 100%;
+        padding-bottom: 100%;
+        position: relative;
+        overflow: hidden;
+    }
+
+}
